# link

./: .gitignore  AGENTS.md  README.md  RELEASE.md  package.json
.github/workflows/: ci.yml  release.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  bridge.rs  deep_link.rs  lcu.rs  lib.rs  lockfile.rs  main.rs  messages.rs  telemetry.rs
