[package]
name = "scrimora-link"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[lib]
name = "scrimora_link_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1.1" }

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.6", features = ["http1", "json", "tokio", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-single-instance = { version = "2.4.1", features = ["deep-link"] }
tauri-plugin-updater = "2.10.1"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5.7"
